--- a/stocks/src/main/resources/templates/header.html
+++ b/stocks/src/main/resources/templates/header.html
@@ -2,8 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 </head>
-<body>
-
-
-</body>
+    <body>
+        <div>
+            <a th:href="@{/stockslisting}">Stocks listing</a>
+                <br>
+            <a th:href="@{/stockslisting/add}">Create stock</a>
+        </div>
+    </body>
 </html>
